curso1/modulo8/ejemplos/citas-backend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: citas
  labels:
    app: citas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citas
  template:
    metadata:
      labels:
        app: citas
    spec:
      containers:
        - name: contenedor-citas
          image: josedom24/citas-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
