curso1/modulo8/ejemplos/citas-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: citas
  name: citas
spec:
  ports:
  - name: 10000-tcp
    port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: citas
  type: ClusterIP
