curso1/modulo8/ejemplos/citas-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citas
spec:
  rules:
  - host: 192.168.39.229.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: citas
            port:
              number: 10000
