curso1/modulo8/ejemplos/citas-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: citas
    sandbox: learn-kubernetes
    sandbox-learn-kubernetes: citas
  name: citas
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: citas
